update README and link to paper

--- a/icde_experiments/synth_data.ipynb
+++ b/icde_experiments/synth_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,12 @@
     "from skmultiflow.data import ConceptDriftStream, \\\n",
     "    AGRAWALGenerator, \\\n",
     "    HyperplaneGenerator, \\\n",
-    "    SEAGenerator, \\\n",
-    "    RandomRBFGenerator"
+    "    SEAGenerator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
