--- a/icde_experiments/experiment.ipynb
+++ b/icde_experiments/experiment.ipynb
@@ -11,7 +11,6 @@
     "import pickle\n",
     "import time\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.patches as mpatches\n",
     "from matplotlib.lines import Line2D\n",
     "import matplotlib\n",
     "matplotlib.rcParams['pdf.fonttype'] = 42\n",
@@ -20,13 +19,14 @@
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, zero_one_loss\n",
     "\n",
     "from skmultiflow.data import FileStream\n",
-    "from skmultiflow.lazy import KNNClassifier\n",
     "from skmultiflow.trees import HoeffdingTreeClassifier, \\\n",
     "    HoeffdingAdaptiveTreeClassifier, \\\n",
     "    ExtremelyFastDecisionTreeClassifier\n",
     "from skmultiflow.meta import AdaptiveRandomForestClassifier, \\\n",
-    "    LeveragingBaggingClassifier, \\\n",
-    "    OnlineBoostingClassifier\n",
+    "    LeveragingBaggingClassifier\n",
+    "\n",
+    "import sys, os\n",
+    "sys.path.append(os.path.abspath(os.path.join('..', 'dmt'))) # add dmt directory to path\n",
     "\n",
     "from dmt.DMT import DynamicModelTree\n",
     "from fimtdd.FIMTDD import FIMTDDClassifier"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -208,7 +208,6 @@
     "                                                          cat_features=stream.cat_features)\n",
     "        \n",
     "        models[stream_name][bs]['fimtdd'] = FIMTDDClassifier(attr=np.arange(stream.n_features), classes=stream.target_values, delta=0.01, n_min=1, tau=0.05, lr=0.01)\n",
-    "        #models[stream_name][bs]['knn'] = KNNClassifier()  # may be included as benchmark\n",
     "        models[stream_name][bs]['ht_mc'] = HoeffdingTreeClassifier(leaf_prediction='mc', binary_split=True, split_confidence=0.01)\n",
     "        models[stream_name][bs]['ht_nba'] = HoeffdingTreeClassifier(leaf_prediction='nba', binary_split=True, split_confidence=0.01)\n",
     "        models[stream_name][bs]['ht_ada'] = HoeffdingAdaptiveTreeClassifier(leaf_prediction='mc', binary_split=True, bootstrap_sampling=False, split_confidence=0.01, random_state=0)\n",
@@ -309,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
